--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,8 @@ arpaca/amorphous/backup/**
 
 !arpaca/amorphous/backup/*.ipynb
 
-example/einstein/xdatcar/**
+example/einstein/2.gather_results/**
+
+!example/einstein/2.gather_results/*.py
+
+/example/einstein/3.post-process/xdatcar/**
